dao project unit tests